UI has been made by using HTML and CSS

--- a/Web Dev/Mini Project/Weather App/index.html
+++ b/Web Dev/Mini Project/Weather App/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-<div class="container">
+    <div class="Box">
+        <div class="header">
+            <div><input type="text" placeholder="Enter City Name"></div>
+            <div><button><img src="images/search.png" alt="search"></button></div>
+        </div>
 
-    <div class="search">
-        <input type="text" placeholder="Enter City here">
-        <button><img src="images/search.png" alt="search"></button>
+        <div class="body">
+            <div>
+                <img src="images/clouds.png" alt="">
+                <h1 id="temp">0°C</h1>
+                <h1 id="city">city</h1>
+            </div>
+        </div>
+
+        <div class="foot">
+            <div class="details">
+                <img src="images/humidity.png" alt="">
+                <p>90% Humidity</p>
+            </div>
+
+            <div class="details">
+                <div><img src="images/wind.png" alt=""></div>
+                <div><p>2.68 Km/h<br>Wind Speed</p></div>
+            </div>
+        </div>
+
+
     </div>
-</div>
-
-
-    <script src="index.js"></script>
 </body>
+
 </html>
